deployments/kong/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
spec:
  gatewayClassName: kong-gateway-class
  listeners:
  - name: kong-test
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
